fix mobile link gap

--- a/src/layout/Portfolio/styles.module.scss
+++ b/src/layout/Portfolio/styles.module.scss
@@ -24,7 +24,7 @@
       color: inherit;
     }
     position: absolute;
-    top: 2rem;
+    top: 1rem;
     left: 50%;
     translate: -50% 0;
 
